1 Adding a timer-callback parameter to the stayInImagery service 2 Using the service for the color picker 3 Adding transition def for 'transform'

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
@@ -8,7 +8,7 @@ div.list {
 	outline: none;
 	margin: 0;
 	text-align: center;
-	transition: height 0.3s;
+	transition: height 0.3s, transform 0.2s;
 	background: @background-color-3;
 
 	.item {
