1 Revert recent fix in tooltip.css (for Chrome 44) 2 Fix instead a button in the imagery status bar

--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -12,7 +12,7 @@
 		*ngIf="mapsAmount > 1"
 		class="small-icon-button drag-me"
 		[attr.tooltip-value]="'Move' | translate"
-		tooltip-class="bottom"
+		tooltip-class="bottom right"
 		(mousedown)="onMove.emit($event)">
 		<i class="icon-drag"></i>
 	</button>
