Testing dom-to-image functionality (#2817)
* Testing dom-to-image functionality.

* Using the export button to create an image.

* Using minimalistic view when exporting maps.

Made the code simpler and now using the minimalistic view.
There is a delay when using this minimalistic view and its data will be disappeared while taking the picture.
I'll try to figure it out later.

* fixing imports

Removing unnecessary and out-of-root imports from  'map-facade'.

* Moving the map export logic to the component

and removing redundant methods.

* Adding a loader to the export process

Adding a loader to the export process and fixing the libs build.

* removing the loader from the captured image and removing redundant file

* Fixed things.

* Update imageries-manager.component.spec.ts

* fix cr

Co-authored-by: Asaf <asaf.masa@gmail.com>

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -29,4 +29,5 @@
 	</ng-template>
 </div>
 
+<ansyn-loader id="loader" #loader [show]="isExporting" [loaderText]="'Exporting Maps' | translate" [rtl]="'rtl' === ('direction' | translate)">
 <ansyn-welcome-notification *ngIf="showWelcomeNotification$ | async"></ansyn-welcome-notification>
