Disabling the width options when the point annotation is selected.

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -39,6 +39,8 @@
 	<li class="expanded-selection line-width-selection">
 
 		<button (click)="toggleSelection(SelectionBoxTypes.LineWidth)"
+				[disabled]="this.mode === 'Point'"
+				[class.disabled]="this.mode === 'Point'"
 				[class.expand]="selectedBox === SelectionBoxTypes.LineWidth">
 			<span class="icon-annotation-weight" [attr.tooltip-value]="'Width' | translate"
 				  tooltip-class="bottom"></span>
