--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -387,6 +387,8 @@
   },
   "credentialsConfig": {
   	"baseUrl": "assets/config/credentials.json",
+  	"permissionSite": "https://www.google.com",
+  	"permissionGuid": "/assets/config/app.config.json",
   	"active":  {{ getv "/ansyn/credentials/active" "false" }},
   	"noCredentialsMessage": "invalid credentials"
   },
