--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -13,9 +13,9 @@
 	background-color: rgba(0,0,0, 0.7);
 	div.credentials{
 		position: relative;
-		top: 100px;
-		width: 250px;
-		height: 200px;
+		top: 10%;
+		width: 350px;
+		height: 70%;
 		margin: auto;
 		align-self: center;
 		border-color: @border;
@@ -28,7 +28,8 @@
 			background-color: @title-color;
 			flex-direction: row;
 			justify-content: space-between;
-			padding: 5px;
+			padding: 10px;
+			font-size: 20px;
 			border-top-left-radius: 5px;
 			border-top-right-radius: 5px;
 
@@ -56,6 +57,7 @@
 
 		div.approve {
 			background-color: @approve-permissions;
+			padding-bottom: 25px;
 		}
 
 		div.buttons {
@@ -84,6 +86,8 @@
 			display: flex;
 			justify-content: flex-end;
 			padding: 10px;
+			border-bottom-left-radius: 5px;
+			border-bottom-right-radius: 5px;
 
 			span {
 				margin: 0 5px;
