update icon and service logic

--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -47,17 +47,19 @@
 			padding: 5px;
 
 			i {
-				color: @application-primary-color;
+				font-size: 30px;
 			}
-
-			i span {
-				margin-bottom: 10px;
+			i, span {
+				margin: 10px;
 			}
 		}
 
 		div.approve {
 			background-color: @approve-permissions;
 			padding-bottom: 25px;
+			i {
+				color: @application-primary-color;
+			}
 		}
 
 		div.buttons {
@@ -90,8 +92,12 @@
 			border-bottom-right-radius: 5px;
 
 			span {
-				margin: 0 5px;
+				margin-left: 5px;
 				cursor: pointer;
+
+				i {
+					font-size: 13px;
+				}
 			}
 		}
 		div.circles {
