--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,30 +1,34 @@
 <div class="credentials">
 	<div class="title">{{'Permissions' | translate}}| {{credentialsService.user.name}}
-	<span class="close-btn" (click)="closeWindow()">X</span></div>
-	<div class="approve">
-		<i class="icon-credentials"></i>
-		<span>{{'You have permissions for:' | translate}}</span>
-		<div class="circles">
-		<p *ngFor="let loc of credentialsService?.approveArea | slice:0:5" class="circle">{{loc.name}}</p>
+		<span class="close-btn" (click)="closeWindow()">X</span></div>
+	<div *ngIf="credentialsService.error; else credentials">{{credentialsService.error.message | translate}}</div>
+	<ng-template #credentials>
+		<div class="approve">
+			<i class="icon-credentials"></i>
+			<span>{{'You have permissions for:' | translate}}</span>
+			<div class="circles">
+				<p *ngFor="let loc of credentialsService?.approveArea | slice:0:5" class="circle">{{loc.name}}</p>
+			</div>
 		</div>
-	</div>
 
-	<div class="not-approve">
-		<i class="icon-credentials"></i>
-		<span>{{'You don\'t have permissions for:' | translate}}</span>
-		<div class="circles">
-			<p *ngFor="let loc of credentialsService?.notApproveArea | slice:0:5" class="circle">{{loc.name}}</p>
+		<div class="not-approve">
+			<i class="icon-credentials-request"></i>
+			<span>{{'You don\'t have permissions for:' | translate}}</span>
+			<div class="circles">
+				<p *ngFor="let loc of credentialsService?.notApproveArea | slice:0:5" class="circle">{{loc.name}}</p>
+			</div>
 		</div>
-	</div>
-	<div class="buttons">
+		<div class="buttons">
 		<span class="ask-permission" (click)="credentialsService.openPermissionSite()">
 			{{'Ask for permissions' | translate}}
 		</span>
-		<span (click)="closeWindow()">{{'Cancel' | translate }}</span>
-	</div>
-	<div class="guid">
-		{{'permissions request guid' | translate}}
-		<span (click)="credentialsService.downloadGuide()">d</span>
-	</div>
-
+			<span (click)="closeWindow()">{{'Cancel' | translate }}</span>
+		</div>
+		<div class="guid">
+			{{'permissions request guid' | translate}}
+			<span (click)="credentialsService.downloadGuide()">
+		<i class="icon-download-guid"></i>
+		</span>
+		</div>
+	</ng-template>
 </div>
