--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -22,7 +22,7 @@
 		<span class="ask-permission" (click)="credentialsService.openPermissionSite()">
 			{{'Ask for permissions' | translate}}
 		</span>
-			<span (click)="closeWindow()">{{'Cancel' | translate }}</span>
+			<span class="close-btn" (click)="closeWindow()">{{'Cancel' | translate }}</span>
 		</div>
 		<div class="guid">
 			{{'permissions request guid' | translate}}
