Adding a [class.disabled] attribute to the width button

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.html
@@ -44,7 +44,8 @@
 <div class="expanded-selection line-width-selection">
 	<p>
 		<button [class.active]="selectedTab[featureId] === Tabs.Weight"
-				(click)="selectTab(Tabs.Weight)">
+				(click)="selectTab(Tabs.Weight)"
+				[class.disabled]="getFeatureProps()?.mode === 'Point'">
 			<i [attr.tooltip-value]="'Width' | translate" tooltip-class="bottom">
 				<svg>
 					<path [attr.d]="SVGICON.editWeightSvg"></path>
