--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -387,8 +387,8 @@
   },
   "credentialsConfig": {
   	"baseUrl": "assets/config/credentials.json",
-  	"permissionSite": "https://www.google.com",
-  	"permissionGuid": "/assets/config/app.config.json",
+  	"authorizationSiteURL": "https://localhost:4200",
+  	"authorizationInfoURL": "/assets/config/app.config.json",
   	"active":  {{ getv "/ansyn/credentials/active" "false" }},
   	"noCredentialsMessage": "invalid credentials"
   },
