--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,13 +1,13 @@
 <div class="credentials">
-	<div class="title">{{'Permissions' | translate}}| {{credentialsService.user.name}}
+	<div class="title">{{'Permissions' | translate}}| {{credentialsService?.user?.name}}
 		<span class="close-btn" (click)="closeWindow()">X</span></div>
-	<div *ngIf="credentialsService.error; else credentials">{{credentialsService.error.message | translate}}</div>
+	<div *ngIf="credentialsService?.error; else credentials">{{credentialsService?.error?.message | translate}}</div>
 	<ng-template #credentials>
 		<div class="approve">
 			<i class="icon-credentials"></i>
 			<span>{{'You have permissions for:' | translate}}</span>
 			<div class="circles">
-				<p *ngFor="let loc of credentialsService?.approveArea | slice:0:5" class="circle">{{loc.name}}</p>
+				<p *ngFor="let area of credentialsService?.authorizedArea | slice:0:5" class="circle">{{area.name}}</p>
 			</div>
 		</div>
 
@@ -15,7 +15,7 @@
 			<i class="icon-credentials-request"></i>
 			<span>{{'You don\'t have permissions for:' | translate}}</span>
 			<div class="circles">
-				<p *ngFor="let loc of credentialsService?.notApproveArea | slice:0:5" class="circle">{{loc.name}}</p>
+				<p *ngFor="let area of credentialsService?.unauthorizedArea | slice:0:5" class="circle">{{area.name}}</p>
 			</div>
 		</div>
 		<div class="buttons">
