--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,14 +1,34 @@
-<div class="credentials" *ngIf="show">
-
-	<div class="buttons">
-		<button [attr.tooltip-value]="'Credentials' | translate"
-				class="small-icon-button"
-				tooltip-class="'left'"
-				(click)="setIsOpenMode()">
+<div class="credentials">
+	<div class="title">{{'Permissions' | translate}}| {{credentialsService?.user?.name}}
+		<span class="close-btn" (click)="closeWindow()">X</span></div>
+	<div *ngIf="credentialsService?.error; else credentials">{{credentialsService?.error?.message | translate}}</div>
+	<ng-template #credentials>
+		<div class="approve">
 			<i class="icon-credentials"></i>
-		</button>
-	</div>
+			<span>{{'You have permissions for:' | translate}}</span>
+			<div class="circles">
+				<p *ngFor="let area of credentialsService?.authorizedAreas | slice:0:5" class="circle">{{area.name}}</p>
+			</div>
+		</div>
 
-	<div [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''" class="credentials-message"
-		 *ngIf="isOpen"> {{this.credentialsMessage}} </div>
+		<div class="not-approve">
+			<i class="icon-credentials-request"></i>
+			<span>{{'You don\'t have permissions for:' | translate}}</span>
+			<div class="circles">
+				<p *ngFor="let area of credentialsService?.unauthorizedAreas | slice:0:5" class="circle">{{area.name}}</p>
+			</div>
+		</div>
+		<div class="buttons">
+		<span class="ask-permission" (click)="credentialsService.openPermissionSite()">
+			{{'Ask for permissions' | translate}}
+		</span>
+			<span class="close-btn" (click)="closeWindow()">{{'Cancel' | translate }}</span>
+		</div>
+		<div class="guid">
+			{{'permissions request guid' | translate}}
+			<span (click)="credentialsService.downloadGuide()">
+		<i class="icon-download-guid"></i>
+		</span>
+		</div>
+	</ng-template>
 </div>
