--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -1,75 +1,118 @@
 @import 'ansyn/less/common';
 @import 'ansyn/less/z-index-globals';
 
+@title-color: #393b3f;
+@approve-permissions: #222223;
+@background: #131518;
+@border: #191b1c;
+
 :host {
-	.buttons {
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0,0,0, 0.7);
+	div.credentials{
 		position: relative;
-		z-index: @z-index-credentials;
-		background: transparent;
-		border: transparent;
-		outline: transparent;
-
-		line-height: 0;
-		left: 5px;
-		top: 6px;
-		text-align: center;
-		margin-bottom: 5px;
+		top: 10%;
+		width: 350px;
+		height: 70%;
+		margin: auto;
+		align-self: center;
+		border-color: @border;
 		color: white;
-		padding: 4px;
-		height: 100%;
+		cursor: default;
 
-		button {
-			position: relative;
-			padding: 4px 5px;
-			vertical-align: middle;
-			color: white;
-			line-height: 0;
-			height: 100%;
 
-			&.small-icon-button {
-				font-size: 17px;
-				background: transparent;
-				border: none;
-				outline: none;
-				padding: 4px 6px;
-				align-items: center;
+		div.title {
+			display: flex;
+			background-color: @title-color;
+			flex-direction: row;
+			justify-content: space-between;
+			padding: 10px;
+			font-size: 20px;
+			border-top-left-radius: 5px;
+			border-top-right-radius: 5px;
 
-				z-index: 1;
-				height: 25px;
+			span {
+				cursor: pointer;
+			}
+		}
 
-				&:disabled {
-					opacity: .6;
+		div.approve, div.not-approve {
+			background-color: @background;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			padding: 5px;
+
+			i {
+				font-size: 30px;
+			}
+			i, span {
+				margin: 10px;
+			}
+		}
+
+		div.approve {
+			background-color: @approve-permissions;
+			padding-bottom: 25px;
+			i {
+				color: @application-primary-color;
+			}
+		}
+
+		div.buttons {
+			background-color: @background;
+			display: flex;
+			flex-direction: column;
+			padding-top: 50px;
+			justify-content: center;
+			align-items: center;
+			padding-bottom: 25px;
+
+			span {
+				margin: 5px;
+				cursor: pointer;
+			}
+			span.ask-permission {
+				color: @application-primary-color;
+				border: 1px solid @application-primary-color;
+				padding: 5px;
+			}
+		}
+
+		div.guid {
+			border-top: 1px solid @border;
+			background-color: @background;
+			display: flex;
+			justify-content: flex-end;
+			padding: 10px;
+			border-bottom-left-radius: 5px;
+			border-bottom-right-radius: 5px;
+
+			span {
+				margin-left: 5px;
+				cursor: pointer;
+
+				i {
+					font-size: 13px;
 				}
 			}
+		}
+		div.circles {
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			justify-content: center;
 
-			.icon::before {
-				vertical-align: middle;
-				display: block;
+			p.circle {
+				padding: 2px;
+				background-color: #3a3a3c;
+				border-radius: 5px;
+				margin: 2px;
 			}
 		}
 	}
 
-	.credentials-message {
-		position: relative;
-		padding: 10px;
-		z-index: @z-index-credentials;
-
-		background-color: rgba(0, 0, 0, 0.3);
-		color: white;
-		align-self: center;
-		white-space: pre-wrap;
-
-		&:hover:not(:disabled) {
-			background: rgba(0, 0, 0, 0.5);
-		}
-
-		&.rtl {
-			direction: rtl;
-		}
-	}
-
-	.credentials {
-		display: flex;
-		flex-direction: row-reverse;
-	}
 }
