--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -310,7 +310,7 @@
   "loggerConfig": {
     "env": "PROD",
     "active": {{ getv "/ansyn/logger/active" "false"}},
-    "componentName": "{{ getv "/ansyn/logger/component/name" "app_client" }}",
+    "component": "{{ getv "/ansyn/logger/component/name" "app_client" }}",
     "disconnectionTimeoutInMinutes": {{ getv "/ansyn/logger/disconnection/minutes" "15"}}
   },
   "statusBarConfig": {
@@ -351,7 +351,8 @@
     },
 	 "httpTimeout": "3000",
 	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }},
-	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }}
+	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }},
+	 "northCalcImagerySensorNamesIgnoreList": []
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
