--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -114,7 +114,7 @@ div.menu-wrapper {
 					i {
 						font-size: calc(~"((100vh - 94px) / @{number-of-menu-item}) - 45px");
 					}
-					span.badge {
+					span.badge.bottom {
 						width: 10px;
 						height: 10px;
 					}
