--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -198,6 +198,14 @@
     "TileWMS": {
 
     },
+    "PIC4CARTO": {
+		"baseUrl": "http://api-pic4carto.openstreetmap.fr/search/bbox",
+		 "pointToGeojsonRadius": 1,
+		 "providers": ["mapillary", "flickr", "openstreetcam", "wikicommons"],
+		 "imageWidth": 2048,
+		 "imageHeight": 1200,
+		 "timeLimit": 15000
+	},
     "MARCO_WMTS": {
 		"imageUrl": "wmts?format=png&request=GetTile&layer={imagePath}&style=band&tileMatrixSet=Pixel&service=WMTS&version=1.0.0",
 		"thumbnailImageUrl": "wms?layers={url}&request=GetMap&format=png&width=256&height=256&bbox={bbox}",
@@ -1030,6 +1038,64 @@
 					  "value": {
 						"sensorType": "others"
 					  }
+					}
+				]
+			}
+		},
+		"PIC4CARTO": {
+			"inActive":false,
+			"whitelist":[
+				{
+					"name":"Entire Earth",
+					"dates":[
+						{
+							"start":null,
+							"end":null
+						}
+					],
+					"sensorNames":[null],
+					"coverage":[
+						[
+							[
+								[-180,-90],
+								[-180,90],
+								[180,90],
+								[180,-90],
+								[-180,-90]
+							]
+						]
+					]
+				}
+			],
+			"blacklist":[],
+			"dataInputFiltersConfig":{
+				"text":"Open Street Images",
+				"value":1,
+				"collapsed":true,
+				"children":[
+					{
+						"text": "Mapillary",
+						"value":{
+							"sensorType":"mapillary"
+						}
+					},
+					{
+						"text":"Flickr",
+						"value":{
+							"sensorType":"flickr"
+						}
+					},
+					{
+						"text":"OpenStreetCam",
+						"value":{
+							"sensorType":"openstreetcam"
+						}
+					},
+					{
+						"text":"Wikimedia Commons",
+						"value":{
+							"sensorType":"wikicommons"
+						}
 					}
 				]
 			}
