Implementing a transparent input element to position the new time picker

--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -9,6 +9,7 @@
 @import "~font-awesome/css/font-awesome.min.css";
 @import "~cesium/Build/Cesium/Widgets/widgets.css";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "~ng-pick-datetime/assets/style/picker.min.css";
 
 
 circle.drop.selected {
