--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -78,23 +78,9 @@
 
 	<!-- Time -->
 	<div class="combo-box-container block hidden-medium-resolution">
-		<!--<ansyn-combo-box
-			class="combo-box-width"
-			direction="top"
-			name="time"
-			icon="icon-status-bar-time"
-			[comboBoxToolTipDescription]="toolTips.timeFilter | translate"
-			[ngModel]="comboBoxesProperties.timeFilter"
-			(ngModelChange)="comboBoxesChange({ timeFilter: $event })">
-
-			<ansyn-combo-box-option *ngFor="let timeFilter of timeFilters" [value]="timeFilter">
-				{{ timeFilter | translate}}
-			</ansyn-combo-box-option>
-
-		</ansyn-combo-box>-->
 		<button ansynComboBoxTrigger
                 #timePickerTrigger
-				(click)="toggleTimelineStartEndSearch()"
+				[owlDateTimeTrigger]="dt10"
 				[attr.tooltip-value]="toolTips.timeFilterEdit | translate"
 				[isActive]="timeSelectionEditIcon"
 				icon="icon-status-bar-time"
@@ -102,9 +88,12 @@
 				class="combo-box-width">
 			<span class="render">{{'Start-End' | translate}}</span>
 		</button>
-		<!--<div class="buttons" [class.active]="timeSelectionEditIcon">
 
-		</div>-->
+		<input [owlDateTime]="dt10"
+			   [selectMode]="'range'"
+			   [(ngModel)]="timeRange"
+			   class="time-picker-input">
+		<owl-date-time #dt10></owl-date-time>
 
 		<ansyn-timeline-timepicker
 			*ngIf="timeSelectionEditIcon"
