--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -79,6 +79,14 @@
 					}
 				}
 			}
+
+			input.time-picker-input {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				opacity: 0;
+				pointer-events: none;
+			}
 		}
 
 		.data-input-filter {
