Implementing event to trigger a search when the time range is set

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -92,18 +92,19 @@
 		<input [owlDateTime]="dt10"
 			   [selectMode]="'range'"
 			   [(ngModel)]="timeRange"
+			   (dateTimeChange)="onTimeRangeChange($event)"
 			   class="time-picker-input">
 		<owl-date-time #dt10></owl-date-time>
 
-		<ansyn-timeline-timepicker
-			*ngIf="timeSelectionEditIcon"
-			(ansynClickOutside)="toggleTimelineStartEndSearch($event)"
-			[trigger]="timePickerTrigger.optionsTrigger.nativeElement"
-			[startDatePickerValue]="(time)?.from"
-			[endDatePickerValue]="(time)?.to"
-			(closeComponent)="toggleTimelineStartEndSearch()"
-			(applyDate)="applyTimelinePickerResult($event)">
-		</ansyn-timeline-timepicker>
+<!--		<ansyn-timeline-timepicker-->
+<!--			*ngIf="timeSelectionEditIcon"-->
+<!--			(ansynClickOutside)="toggleTimelineStartEndSearch($event)"-->
+<!--			[trigger]="timePickerTrigger.optionsTrigger.nativeElement"-->
+<!--			[startDatePickerValue]="(time)?.from"-->
+<!--			[endDatePickerValue]="(time)?.to"-->
+<!--			(closeComponent)="toggleTimelineStartEndSearch()"-->
+<!--			(applyDate)="applyTimelinePickerResult($event)">-->
+<!--		</ansyn-timeline-timepicker>-->
 	</div>
 
 	<!-- Layout -->
