--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -78,20 +78,6 @@
 
 	<!-- Time -->
 	<div class="combo-box-container block hidden-medium-resolution">
-		<!--<ansyn-combo-box
-			class="combo-box-width"
-			direction="top"
-			name="time"
-			icon="icon-status-bar-time"
-			[comboBoxToolTipDescription]="toolTips.timeFilter | translate"
-			[ngModel]="comboBoxesProperties.timeFilter"
-			(ngModelChange)="comboBoxesChange({ timeFilter: $event })">
-
-			<ansyn-combo-box-option *ngFor="let timeFilter of timeFilters" [value]="timeFilter">
-				{{ timeFilter | translate}}
-			</ansyn-combo-box-option>
-
-		</ansyn-combo-box>-->
 		<button ansynComboBoxTrigger
                 #timePickerTrigger
 				(click)="toggleTimelineStartEndSearch()"
@@ -102,9 +88,14 @@
 				class="combo-box-width">
 			<span class="render">{{'Start-End' | translate}}</span>
 		</button>
-		<!--<div class="buttons" [class.active]="timeSelectionEditIcon">
 
-		</div>-->
+		<ngx-datetime-range-picker
+			[options]="dateRangePickerOptions"
+			[settings]="dateTimeRangePickerSettings"
+			[(dateRangeModel)]="dateTimeRange"
+			(dateRangeChanged)="onTimeRangeChanged($event)"
+		>
+		</ngx-datetime-range-picker>
 
 		<ansyn-timeline-timepicker
 			*ngIf="timeSelectionEditIcon"
